View Notes Page Progress
Has heading text
Search bar
Example note mockup

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -4,7 +4,7 @@
     { "email": "john@foo.com", "password": "changeme" }
   ],
 
-  "defaultData": [
+  "defaultNotes": [
     { "name": "Basket", "quantity": 3, "owner": "john@foo.com", "condition": "excellent" },
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
