adding landing page skeleton

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@ngneat/falso": "^7.2.0",
     "@prisma/client": "^5.16.1",
     "bcrypt": "^5.1.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "multiselect-react-dropdown": "^2.0.25",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
