Can search for owner

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -32,7 +32,7 @@
       "professor": "Chad Morita",
       "description": "Note description",
       "documentLink": "/",
-      "owner": "john@foo.com"
+      "owner": "john@foodddd.com"
     },
     {
       "email": "john@foo.com",
