--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: nextjs-application-template
-description: A template for quickly starting Next.js application development
+title: Notehub Manoa
+description: A website that lets you share and view previous semester notes
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
