--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Notehub Manoa
-description: A website that lets you share and view previous semester notes
+description: Website that lets you share and view previous semester notes for your classes
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
